[project]
name = "remake-todo"
version = "0.1.0"
description = ""
authors = [
    {name = "Andy",email = "andychen.105@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "remake_todo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
