[project]
name = "my-films"
version = "0.1.0"
description = ""
authors = [
    {name = "Andy",email = "andychen.105@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "my_films", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
